src/assets/scss/contact-card.scss
.contact-section {
    margin: 0.5em 2em 3em 0em;
    h4 {
        margin-bottom: 1.25em;
    }
    .row {
        padding: 1em 0em;
        display: flex;
        flex-direction: row;
        .MuiDivider-vertical {
            width: 2px;
            height: 65%;
        }
        .contact-field {
            display:flex;
            .icon {
                margin: auto;
                padding: 1em 0.5em 1em 0em;
            }
            .data {
                margin: auto;
                display: flex;
                flex-direction: column;
                .contact-field-title {
                    font-weight:500;
                }
            }

        }
        .tax-section {
            display: flex;
            flex-direction: row;
            .tax-id-title {
                font-weight: 500;
                padding-left:20px;
            }
            .tax-id-data {
                padding-left:5px;
            }
        }
    }
}

.card {
    //height: 200px;
}

